<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:ignore="HardcodedText">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#263238">




    <EditText
        android:id="@+id/input"
        android:layout_width="match_parent"
        android:layout_marginBottom="1pt"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_weight="1"
        android:background="#263238"
        android:textColor="@color/white"
        android:textSize="20pt"
        android:autofillHints="false"
        android:textAlignment="textEnd"
        android:text="@string/display" />


    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_marginBottom="1pt"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_weight="1"
        android:gravity="right|center"
        android:textColor="@color/white"
        android:textSize="20pt"
        android:text="" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"


        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnClear"
                android:text="@string/Clear"
                android:onClick="btnClear"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
            <Button
                android:id="@+id/btnPar"
                android:text="@string/par"
                android:onClick="btnPar"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>

            <Button
                android:id="@+id/btnDiv"
                android:text="@string/div"
                android:onClick="btnDiv"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                >

            </Button>
            <ImageButton
                android:id="@+id/btnBack"
                android:layout_margin="5dp"
                android:onClick="btnBack"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:text=""
                app:srcCompat="@drawable/backspace"
                android:background="@drawable/shape"
                ></ImageButton>

        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btnSeven"
                android:text="@string/_7"
                android:onClick="btnSeven"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
            <Button
                android:id="@+id/btnEight"
                android:text="@string/_8"
                android:onClick="btnEight"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
            <Button
                android:id="@+id/btnNine"
                android:text="@string/_9"
                android:onClick="btnNine"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
            <Button
                android:id="@+id/btnMul"
                android:text="@string/mul"
                android:onClick="btnMul"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnFour"
                android:text="@string/_4"
                android:onClick="btnFour"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>

            <Button
                android:id="@+id/btnFive"
                android:text="@string/_5"
                android:onClick="btnFive"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
            <Button
                android:id="@+id/btnSix"
                android:text="@string/_6"
                android:onClick="btnSix"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>

            <Button
                android:id="@+id/btnMinus"
                android:text="@string/minus"
                android:onClick="btnMinus"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnOne"
                android:text="@string/_1"
                android:onClick="btnOne"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
            <Button
                android:id="@+id/btnTwo"
                android:text="@string/_2"
                android:onClick="btnTwo"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
            <Button
                android:id="@+id/btnThree"
                android:text="@string/_3"
                android:onClick="btnThree"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
            <Button
                android:id="@+id/btnPlus"
                android:text="@string/plus"
                android:onClick="btnPlus"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
        </TableRow>
        <TableRow
            android:layout_marginBottom="1dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/btnPercent"
                android:text="@string/percent"
                android:onClick="btnPercent"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
            <Button
                android:id="@+id/btnZero"
                android:text="@string/zero"
                android:onClick="btnZero"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
            <Button
                android:id="@+id/btnPoint"
                android:text="@string/point"
                android:onClick="btnPoint"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
            <Button
                android:id="@+id/btnEqual"
                android:text="@string/equal"
                android:onClick="btnEqual"
                android:layout_margin="5dp"
                android:layout_height="70dp"
                android:layout_weight="1"
                android:textColor="@color/white"
                android:layout_width="30pt"
                android:textSize="22sp"
                android:background="@drawable/shape"
                ></Button>
        </TableRow>
    </TableLayout>
</LinearLayout>
<com.google.android.material.navigation.NavigationView
android:layout_width="wrap_content"
android:layout_height="match_parent"
android:layout_gravity="start"
app:menu="@menu/navigation_menu" />

    </androidx.drawerlayout.widget.DrawerLayout>